--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,10 @@
     <link href="{{ url_for('static', filename='css/custom.css') }}" rel="stylesheet">
   </head>
 
-  <body>
+  <body >
 
     <!-- Navigation -->
+    <div class="container">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="#">Skin Disease Detection</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,6 +49,7 @@
         {% endif %}
       </div>
     </nav>
+      </div>
 
     <!-- Page content -->
     <div class="container mt-5">
