--- a/templates/base.html
+++ b/templates/base.html
@@ -10,35 +10,35 @@
     <link href="{{ url_for('static', filename='css/custom.css') }}" rel="stylesheet">
   </head>
 
-  <body >
+  <body>
 
     <!-- Navigation -->
     <div class="container">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Skin Disease Detection</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item {% if active == 'home' %}active{% endif %}">
-            <a class="nav-link" href="{{ url_for('home') }}">Home</a>
-          </li>
-          <li class="nav-item {% if active == 'about' %}active{% endif %}">
-            <a class="nav-link" href="{{ url_for('about') }}">About</a>
-          </li>
-          <li class="nav-item {% if active == 'contact' %}active{% endif %}">
-            <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
-          </li>
-        </ul>
-        {% if session.username %}
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-          </li>
-        </ul>
-        {% else %}
-        <ul class="navbar-nav">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="#">Skin Disease Detection</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item {% if active == 'home' %}active{% endif %}">
+              <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+            </li>
+            <li class="nav-item {% if active == 'about' %}active{% endif %}">
+              <a class="nav-link" href="{{ url_for('about') }}">About</a>
+            </li>
+            <li class="nav-item {% if active == 'contact' %}active{% endif %}">
+              <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
+            </li>
+          </ul>
+          {% if session.username %}
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+            </li>
+          </ul>
+          {% else %}
+          <ul class="navbar-nav" style="margin-left: auto; margin-right:30px;">
           <li class="nav-item {% if active == 'register' %}active{% endif %}">
             <a class="nav-link" href="{{ url_for('register') }}">Register</a>
           </li>
@@ -46,13 +46,14 @@
             <a class="nav-link" href="{{ url_for('login') }}">Login</a>
           </li>
         </ul>
-        {% endif %}
-      </div>
-    </nav>
-      </div>
+
+          {% endif %}
+        </div>
+      </nav>
+    </div>
 
     <!-- Page content -->
-    <div class="container mt-5">
+    <div class="container " style="margin-top:100px;">
       {% with messages = get_flashed_messages() %}
       {% if messages %}
       <div class="alert alert-danger">
@@ -69,12 +70,14 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer">
-      <div class="container">
+    <footer class="footer bg-dark" style="position: absolute; bottom: 0; width:100%; text-align:center;">
+      <div class="container pt-3 pb-3">
         <span class="text-muted">&copy; Skin Disease Detection 2023</span>
       </div>
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+  </body>
+</html>
