--- a/templates/result.html
+++ b/templates/result.html
@@ -4,8 +4,8 @@
 
 {% block content %}
   <h1>Detection Results</h1>
-  {% if prediction %}
-  <h2>Prediction: {{ prediction }}</h2>
+  {% if result %}
+  <h2>Prediction: {{ result }}</h2>
   {% else %}
   <p>No disease detected.</p>
   {% endif %}
