--- a/templates/base.html
+++ b/templates/base.html
@@ -32,8 +32,13 @@
             </li>
           </ul>
           {% if session.username %}
-          <ul class="navbar-nav">
+
+          <ul class="navbar-nav" style="margin-left: auto; margin-right:30px;">
             <li class="nav-item">
+             <a class="nav-link"> Welcome, {{ session.username }}</a>
+            </li>
+            <li class="nav-item">
+
               <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
             </li>
           </ul>
