--- a/templates/login.html
+++ b/templates/login.html
@@ -6,13 +6,13 @@
   <h1>Login</h1>
   <form method="post" action="{{ url_for('login') }}">
     <div class="form-group">
-      <label for="username">Username:</label>
-      <input type="text" class="form-control" id="username" name="username" required>
+      <label for="email">Email:</label>
+      <input type="email" class="form-control" id="email" name="email" required>
     </div>
     <div class="form-group">
       <label for="password">Password:</label>
       <input type="password" class="form-control" id="password" name="password" required>
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary mt-5 mb-5">Login</button>
   </form>
 {% endblock %}
